Bug/31817/styling adjustments (#543)
* Fixing issue with text not fitting in the black box on the flight hours widget

* Updating the responsive styles for the hours widget for instructors

* Updating breakpoint on instructor view. Updating position of text and image to be left aligned when less than 715px width

--- a/apps/recent-activity/src/app/components/recent-activity-instructor/recent-activity-instructor.component.scss
+++ b/apps/recent-activity/src/app/components/recent-activity-instructor/recent-activity-instructor.component.scss
@@ -37,12 +37,14 @@ cirrus-recent-activity-instructer {
   }
 
   @include breakpoint(mobile) {
-    flex-direction: row;
-    justify-content: space-between;
-
     p {
       margin: 15px 30px 30px 0;
     }
+  }
+
+  @media (min-width: 715px) {
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 
